--- a/src/Components/TransactionHistory/TransactionHistory.module.css
+++ b/src/Components/TransactionHistory/TransactionHistory.module.css
@@ -1,10 +1,10 @@
 .transaction_history {
   margin: 0 auto;
+  margin-top: 30px;
   width: 620px;
   text-align: center;
   border-collapse: collapse;
   box-shadow: 0px 1px 3px 0px rgba(191, 205, 222, 0.75);
-  margin: 0px 0px 50px -100px;
 }
 .table_head {
   color: #fff;
