--- a/src/Components/Statistics/Statistics.module.css
+++ b/src/Components/Statistics/Statistics.module.css
@@ -1,4 +1,5 @@
 @value font-stack from '../../variables.module.css';
+
 .statistics {
   margin: 0 auto;
   max-width: 430px;
@@ -21,7 +22,12 @@
   align-items: stretch;
 }
 .item {
+  display: flex;
   width: 100%;
-  padding-bottom: 25px;
-  padding-top: 25px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  flex-direction: column;
+}
+.label {
+  padding-bottom: 5px;
 }
